refactored file resources, deleted verb interface, AB#891